mengubah link email

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Tailwind CSS</title>
+    <title>Portfolio</title>
 
     <!-- css sendiri -->
     <link href="dist/output.css" rel="stylesheet" />
@@ -97,9 +97,7 @@
             <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl mt-3">Front-End Developer</h2>
             <p class="font-medium text-secondary mb-10 leading-relaxed">Perkenalkan nama saya <span class="text-dark font-bold dark:text-white">Wahyu Sampurno Adi</span>, saya berasal dari Semarang dan lahir pada tahun 2003.</p>
 
-            <a href="https://mailto:wahyusampurnoadi@gmail.com" target="_blank" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-90 transition duration-300 ease-in-out"
-              >Hubungi Saya</a
-            >
+            <a href="mailto:wahyusampurnoadi@gmail.com" target="_blank" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-90 transition duration-300 ease-in-out">Hubungi Saya</a>
           </div>
 
           <div class="w-full self-end px-4 lg:w-1/2 hp:pt-10 md:pt-0">
