memodifikasi logo dan merubah icon tombol dark mode

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
 
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="dist/favicon/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="dist/favicon/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="dist/favicon/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="dist/favicon/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="dist/favicon/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="dist/favicon/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="dist/favicon/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="dist/favicon/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="dist/favicon/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="dist/favicon/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="dist/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="dist/favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="dist/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="dist/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
+
     <!-- css sendiri -->
     <link href="dist/output.css" rel="stylesheet" />
 
@@ -24,7 +43,7 @@
       <div class="container z-20">
         <div class="flex items-center justify-between relative">
           <div class="px-4">
-            <a href="#home" class="font-bold text-lg text-primary block py-6 select-none">Wahyu</a>
+            <a href="#home" class="block py-6 select-none"><img src="dist/img/logo1.png" alt="Logo" width="40" /></a>
           </div>
           <div class="flex items-center px-4">
             <button id="hamburger" name="hamburger" type="button" class="block absolute right-4 lg:hidden">
@@ -58,14 +77,14 @@
                 </li>
                 <li class="mt-3 lg:mt-0 flex items-center pl-8">
                   <div class="flex">
-                    <span class="mr-2 text-sm text-slate-500 dark:text-white">light</span>
+                    <span class="mr-2 text-sm text-slate-500 dark:text-white">Light</span>
                     <input type="checkbox" class="hidden" id="dark-toggle" />
                     <label for="dark-toggle">
                       <div class="flex h-5 w-9 cursor-pointer items-center rounded-full bg-slate-500 p-1">
-                        <div class="toggle-circle h-4 w-4 rounded-full bg-white transition duration-300 ease-in-out"></div>
+                        <img src="https://img.icons8.com/emoji/48/null/full-moon-emoji.png" class="toggle-circle h-4 w-4 transition duration-300 ease-in-out" />
                       </div>
                     </label>
-                    <span class="ml-2 text-sm text-dark dark:text-white">dark</span>
+                    <span class="ml-2 text-sm text-dark dark:text-white">Dark</span>
                   </div>
                 </li>
               </ul>
@@ -147,11 +166,7 @@
               </a>
 
               <!-- Gmail -->
-              <a
-                href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCDCRrMQhftMvCzMGQBDSCxBCrLZjhngvWFdLzmNSRHMZnLvdGrSgjqSxNGPJJFJVSBNlq"
-                target="_blank"
-                class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border bg-white border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
-              >
+              <a href="mailto:wahyusampurnoadi@gmail.com" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border bg-white border-slate-300 hover:border-primary hover:bg-primary hover:text-white">
                 <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                   <title>Gmail</title>
                   <path
